# virtual-interviewer

./: README.md
virtual-interviewer-main/: .gitignore  README.md  app.py  config.py  database.py  pyproject.toml  report_generator.py  resume_extractor.py
virtual-interviewer-main/services/: audio_service.py  llm_service.py  timeline_service.py  tts_service.py  video_service.py
virtual-interviewer-main/templates/: index.html
virtual-interviewer-main/templates/css/: base.css  interview.css  pages.css  report.css
virtual-interviewer-main/templates/js/: app.js  auth.js  dashboard.js  interview.js  report.js  state.js  ui.js
virtual-interviewer-main/templates/pages/: auth.html  dashboard.html  interview.html  report.html
